2008-Aug-22  yselkowitz

	* bin/cygport.in (__prepinfo): Compress only *.info* files.

	* configure.in: Post-release version bump.

2008-Aug-19  yselkowitz

	* Branched 0.3.13 for cygwin-1.5; trunk is now for cygwin-1.7.